tests/rustdoc-ui/use_both_out_dir_and_output_options.rs
//@ compile-flags: --output ./foo

//~? ERROR cannot use both 'out-dir' and 'output' at once
